# godot-lore-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRDPARTY.md
.github/: FUNDING.yml
src/: lore_hello.cpp  lore_hello.h  lore_vcs_plugin.cpp  lore_vcs_plugin.h  register_types.cpp  register_types.h
src/lore_ffi/: lore_c_api.h  lore_call.h  lore_client.cpp  lore_client.h
test_project/: plugin_test.tscn  plugin_tester.gd  plugin_tester.gd.uid  project.godot
test_project/addons/godot-lore-plugin/: LICENSE  README.md  THIRD_PARTY_LICENSES.md  godot-lore-plugin.gdextension  godot-lore-plugin.gdextension.uid
tests/: lore_ffi_test.cpp
tools/: update-lore-snapshot.ps1
